Model tested and executed

--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -3741,6 +3741,76 @@
     "    url = final_rating.iloc[idx]['image_url']\n",
     "    print(url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "3aa272b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
+    "pickle.dump(book_names, open('artifacts/book_names.pkl', 'wb'))\n",
+    "pickle.dump(final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
+    "pickle.dump(book_pivot, open('artifacts/book_pivot.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d52fe3a",
+   "metadata": {},
+   "source": [
+    "Testing the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d2100abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_book(book_name):\n",
+    "    book_id = np.where(book_pivot.index == book_name)[0][0]\n",
+    "    distance, suggestion = model.kneighbors(book_pivot.iloc[book_id,:].values.reshape(1,-1), n_neighbors=6)\n",
+    "\n",
+    "    for i in range(len(suggestion)):\n",
+    "        books = book_pivot.index[suggestion[i]]\n",
+    "        for j in books:\n",
+    "            if j == book_name:\n",
+    "                print(f\"You searched '{book_name}'\\n\")\n",
+    "                print(\"The suggestion books are: \\n\")\n",
+    "            else:\n",
+    "                print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "89a99836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You searched 'The Bluest Eye'\n",
+      "\n",
+      "The suggestion books are: \n",
+      "\n",
+      "No Safe Place\n",
+      "Exclusive\n",
+      "A Civil Action\n",
+      "Mother of Pearl\n",
+      "A Day Late and a Dollar Short\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_name = \"The Bluest Eye\"\n",
+    "recommend_book(book_name)"
+   ]
   }
  ],
  "metadata": {
