--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f38c01f0",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "e1bb8a7a",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\james\\AppData\\Local\\Temp\\ipykernel_38888\\1431471872.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\james\\AppData\\Local\\Temp\\ipykernel_20408\\1431471872.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  books = pd.read_csv('BX-Books.csv', sep=\";\", on_bad_lines='skip', encoding='latin-1')\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "d53ab4c3",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "4  http://images.amazon.com/images/P/0393045218.0...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "783306b7",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "(271360, 8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "b763d31a",
    "metadata": {},
    "outputs": [],
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "80a8010e",
    "metadata": {},
    "outputs": [
@@ -825,13 +825,47 @@
        "4   276729  0521795028            6"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "52c3f781",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of          User-ID         ISBN  Book-Rating\n",
+       "0         276725   034545104X            0\n",
+       "1         276726   0155061224            5\n",
+       "2         276727   0446520802            0\n",
+       "3         276729   052165615X            3\n",
+       "4         276729   0521795028            6\n",
+       "...          ...          ...          ...\n",
+       "1149775   276704   1563526298            9\n",
+       "1149776   276706   0679447156            0\n",
+       "1149777   276709   0515107662           10\n",
+       "1149778   276721   0590442449           10\n",
+       "1149779   276723  05162443314            8\n",
+       "\n",
+       "[1149780 rows x 3 columns]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head"
    ]
   },
   {
